--- a/src/main/webapp/pages/BandiEspertiPages/atenei.zul
+++ b/src/main/webapp/pages/BandiEspertiPages/atenei.zul
@@ -78,10 +78,10 @@
 									<h:td></h:td>
 										<h:td>
 											<separator />
-											<button  id="bnt_aggiungi" label="Aggiungi Ateneo" mold="os"
-												image="../../icons/16x16/actions/page_save.png" />
-											<button visible="false" id="bnt_aggiorna" label="Modifica Ateneo" mold="os"
-												image="../../icons/16x16/actions/page_save.png" />
+											<button  id="bnt_aggiungi" label="Aggiungi Ateneo" 
+												image="../../icons/32x32/page_save.png" />
+											<button visible="false" id="bnt_aggiorna" label="Modifica Ateneo" 
+												image="../../icons/32x32/page_save.png" />
 										</h:td>
 								</h:tr>
 							</h:table>
