--- a/src/main/webapp/pages/BandiEspertiPages/carriera.zul
+++ b/src/main/webapp/pages/BandiEspertiPages/carriera.zul
@@ -50,8 +50,8 @@
 							</h:div>
 							<separator />
 							<separator />
-								<button  id="bnt_salva_presentazione" label="Salva Presentazione" mold="os"
-											image="../../icons/16x16/actions/page_save.png" />
+								<button  id="bnt_salva_presentazione" label="Salva Presentazione" 
+											image="../../icons/32x32/page_save.png" />
 							
 							<separator />
 							<separator />
@@ -221,10 +221,10 @@
 									<h:td></h:td>
 										<h:td>
 											<separator />
-											<button  id="bnt_aggiungi_carriera" label="Aggiungi Carriera" mold="os"
-												image="../../icons/16x16/actions/page_save.png" />
-											<button visible="false" id="bnt_aggiorna_carriera" label="Modifica Carriera" mold="os"
-												image="../../icons/16x16/actions/page_save.png" />
+											<button  id="bnt_aggiungi_carriera" label="Aggiungi Carriera" 
+												image="../../icons/32x32/page_save.png" />
+											<button visible="false" id="bnt_aggiorna_carriera" label="Modifica Carriera" 
+												image="../../icons/32x32/page_save.png" />
 										</h:td>
 								</h:tr>
 							</h:table>
