--- a/src/main/webapp/pages/BandiEspertiPages/datoriDiLavoro.zul
+++ b/src/main/webapp/pages/BandiEspertiPages/datoriDiLavoro.zul
@@ -64,9 +64,9 @@
 										<h:td>
 											<separator />
 											<button  id="bnt_aggiungi" label="Aggiungi Datore di Lavoro"
-												image="../../icons/16x16/actions/page_save.png" />
-											<button visible="false" id="bnt_aggiorna" label="Modifica Datore di Lavoro" mold="os"
-												image="../../icons/16x16/actions/page_save.png" />
+												image="../../icons/32x32/page_save.png" />
+											<button visible="false" id="bnt_aggiorna" label="Modifica Datore di Lavoro" 
+												image="../../icons/32x32/page_save.png" />
 										</h:td>
 								</h:tr>
 							</h:table>
