--- a/src/main/webapp/pages/BandiEspertiPages/dettaglioEspertoSelezionato.zul
+++ b/src/main/webapp/pages/BandiEspertiPages/dettaglioEspertoSelezionato.zul
@@ -34,7 +34,7 @@
 	</h:tr>
 	
 	<h:tr align="center">
-		<h:td colspan="2"><button label="Salva" id="btn_salva" image="/icons/16x16/actions/page_save.png" /></h:td>
+		<h:td colspan="2"><button label="Salva" id="btn_salva" image="/icons/32x32/page_save.png" /></h:td>
 	</h:tr>
 </h:table>
 </div>
