--- a/src/main/webapp/pages/BandiEspertiPages/login.zul
+++ b/src/main/webapp/pages/BandiEspertiPages/login.zul
@@ -15,6 +15,7 @@
 					<separator/>
 							<h:div id="areaRiservata">
 								<h:img src="../../img/login.png" alt="Area Riservata" />
+								<separator height="20px"/>
 								<h:table cellpadding="2" cellspacing="3">
 									<h:tr>
 										<h:td>Codice Fiscale</h:td>
@@ -29,6 +30,7 @@
 												<separator/><separator/>
 										</h:td>
 									</h:tr>
+									<separator/>
 									<h:tr>
 										<h:td>
 											<label id="lbl_logged" value="Not Logged"
@@ -48,7 +50,6 @@
 						<h:br />
 							<h:ul id="MenuCentro">
 						<h:li>
-						
 					<h:a href="../BandiEspertiPages/registrazione.zul"><h:img src="../../img/registrazione2.png" /> </h:a>
 						</h:li>
 						<h:li>
